--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,19 @@
 /node_modules
+/public/css
 /public/hot
+/public/js
 /public/storage
 /storage/*.key
 /vendor
-/.idea
-/.vscode
-/.vagrant
+.env
+.env.backup
+.phpunit.result.cache
+.phpstorm.meta.php
+_ide_helper.php
+docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.env
+/.idea
+/.vscode
